--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Irregular Verbs - Study</title>
-	<link rel="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
 	<div class="container">
 		<section class="choose-verbs">
-		  <div class="l-one">
-		  	<h3>Level 1</h3>
+		  <div class="l-one choose-verbs-section">
+		  	<h3 class="toggle-fold">Level 1</h3>
 		  	<fieldset><input type="checkbox" name="think" id="think"><label for="think">think</label></fieldset>
 		  	<fieldset><input type="checkbox" name="tell" id="tell"><label for="tell">tell</label></fieldset>
 		  	<fieldset><input type="checkbox" name="swim" id="swim"><label for="swim">swim</label></fieldset>
@@ -48,8 +48,8 @@
 				<fieldset><input type="checkbox" name="begin" id="begin"><label for="begin">begin</label></fieldset>
 				<fieldset><input type="checkbox" name="be" id="be"><label for="be">be</label></fieldset>
 		  </div>
-		  <div class="l-two fold">
-		  	<h3>Level 2</h3>
+		  <div class="l-two fold choose-verbs-section">
+		  	<h3 class="toggle-fold">Level 2</h3>
 		  	<fieldset><input type="checkbox" name="write" id="write"><label for="write">write</label></fieldset>
 		  	<fieldset><input type="checkbox" name="understand" id="understand"><label for="understand">understand</label></fieldset>
 		  	<fieldset><input type="checkbox" name="teach" id="teach"><label for="teach">teach</label></fieldset>
@@ -75,8 +75,8 @@
 				
 				<fieldset><input type="checkbox" name="become" id="become"><label for="become">become</label></fieldset>
 		  </div>
-		  <div class="l-three fold">
-		  	<h3>Level 3</h3>
+		  <div class="l-three fold choose-verbs-section">
+		  	<h3 class="toggle-fold">Level 3</h3>
 		  	<fieldset><input type="checkbox" name="wake" id="wake"><label for="wake">wake</label></fieldset>
 		  	<fieldset><input type="checkbox" name="win" id="win"><label for="win">win</label></fieldset>
 				<fieldset><input type="checkbox" name="steal" id="steal"><label for="steal">steal</label></fieldset>
@@ -100,8 +100,8 @@
 				<fieldset><input type="checkbox" name="build" id="build"><label for="build">build</label></fieldset>
 				<fieldset><input type="checkbox" name="bite" id="bite"><label for="bite">bite</label></fieldset>
 		  </div>
-		  <div class="l-four fold">
-		  	<h3>Level 4</h3>
+		  <div class="l-four fold choose-verbs-section">
+		  	<h3 class="toggle-fold">Level 4</h3>
 				<fieldset><input type="checkbox" name="upset" id="upset"><label for="upset">upset</label></fieldset>
 				<fieldset><input type="checkbox" name="throw" id="throw"><label for="throw">throw</label></fieldset>
 				<fieldset><input type="checkbox" name="stick" id="stick"><label for="stick">stick</label></fieldset>
