--- a/index.html
+++ b/index.html
@@ -131,29 +131,12 @@
 			
 		</section>
 		<section class="study hide  full-height-block">
+		  <div class="full-height-block__counter"></div>
 			<div class="full-height-block__content">
 				<h2 class="full-height-block__verb">To be </h2>
 				<ul class="full-height-block__forms">
 				  <li class="full-height-block__list-item">be</li>
 					<li class="full-height-block__list-item">was/were</li>
-					<li class="full-height-block__list-item">been</li>
-				</ul>
-				<audio id="play" controls>
-				 <source src="https://elt.oup.com/elt/students/genericwordlist/irregularverbs/audio/be.mp3" type='audio/mp3'>
-				</audio>
-			</div>
-			<div class="full-height-block__btn-wrap btn-wrap" >
-				<button class="button" id="next">Next &ggg;</button>
-			</div>
-		</section>
-		<section class="practice  full-height-block">
-			<div class="full-height-block__content">
-				<h2 class="full-height-block__verb">To be </h2>
-				<ul class="full-height-block__forms">
-				  <li class="full-height-block__list-item">be</li>
-					<li class="full-height-block__list-item">
-						<input type="text" class="full-height-block__input">
-					</li>
 					<li class="full-height-block__list-item">been</li>
 				</ul>
 				<audio id="play" controls>
