results-section begin

--- a/index.html
+++ b/index.html
@@ -158,6 +158,10 @@
 				<button class="button" id="next">Next &ggg;</button>
 			</div>
 		</section>
+		<section class="results  hide">
+			<div class="results__item  results__item--correct">tell</div>
+			<div class="results__item  results__item--incorrect">say</div>
+		</section>
 	</div>
 	<script src="js/script.js"></script>
 </body>
