--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Irregular Verbs - Study</title>
 	<link href="css/style.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,900' rel='stylesheet' type='text/css'>
@@ -14,7 +15,14 @@
     </symbol>
 </svg>
 <nav class="main-nav">
-	
+	<div class="container">
+		<ul class="main-nav__list">
+			<li class="main-nav__item">Brush up on English Irregular Verbs</li>
+			<!-- <li class="main-nav__item"><a href="#">How it works</a></li>
+			<li class="main-nav__item">About</li>
+			<li class="main-nav__item">Contact</li> -->
+		</ul>
+	</div>
 </nav>
 	<div class="container">
 		<section class="choose-verbs">
