back to homepage link - abs

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			</div>
 		</section>
 		<section class="results  full-height-block  hide">
-		  <div class="results__home"><a href="index.html">Back</a></div>
+		  <div class="results__home"><a href="index.html">Back to Homepage</a></div>
 		  <ul class="results__wrapper" id="set-results">
 		  </ul>		
 		</section>
