new button positioning

--- a/index.html
+++ b/index.html
@@ -14,10 +14,7 @@
       <path d="M8 10c-.266 0-.5-.094-1-.336L0 6v7c0 .55.45 1 1 1h14c.55 0 1-.45 1-1V6L9 9.664c-.5.242-.734.336-1 .336zm7-8H1c-.55 0-1 .45-1 1v.758l8 4.205 8-4.205V3c0-.55-.45-1-1-1z" />
     </symbol>
 </svg>
-<div class="button-container  button-container--fixed">
-	<button id="chooseVerbs" class="button">Study!</button>
-	<button id="practiceVerbs" class="button  button--transparent">Practice!</button>
-</div>
+
 <nav class="main-nav">
 	<ul class="main-nav__list">
 		<li class="main-nav__item">Brush up on English Irregular Verbs</li>
@@ -77,6 +74,10 @@
 				<div class="choose-verbs__letter">T</div>			
 				<fieldset><input type="checkbox" name="tell" id="tell"><label for="tell">tell<span class="translation">: рассказывать</span></label></fieldset>
 		  	<fieldset><input type="checkbox" name="think" id="think"><label for="think">think<span class="translation">: думать</span></label></fieldset>
+		  	<div class="button-container  button-container--fixed " id="main-buttons">
+					<button id="chooseVerbs" class="button">Study!</button>
+					<button id="practiceVerbs" class="button  button--transparent">Practice!</button>
+				</div>
 		  </div>
 		  <div class="fold choose-verbs__section  choose-verbs__section--two">
 		  	<h3 class="toggle-fold">Уровень 2  
