--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav class="main-nav">
 	<ul class="main-nav__list">
-		<li class="main-nav__item">Brush up on English Irregular Verbs</li>
+		<li class="main-nav__item"><a href="index.html">Brush up on English Irregular Verbs</a></li>
 		<!-- <li class="main-nav__item"><a href="#">How it works</a></li>
 		<li class="main-nav__item">About</li>
 		<li class="main-nav__item">Contact</li> -->
