--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </nav>
 	<div class="container">
 		<section class="choose-verbs">
-		  <div class="choose-verbs__section  choose-verbs__section--one">
+		  <div class="choose-verbs__section  choose-verbs__section--one" data-count="one">
 		  	<h3 class="toggle-fold">Уровень 1 - Слова используются очень часто
            <button class="choose-verbs__all  button--small  button">Выбрать все</button>
            <button class="choose-verbs__clear-all  button--small  button  button--transparent">Очистить все</button>
@@ -79,7 +79,7 @@
 					<button id="practiceVerbs" class="button  button--transparent">Practice!</button>
 				</div>
 		  </div>
-		  <div class="fold choose-verbs__section  choose-verbs__section--two">
+		  <div class="fold choose-verbs__section  choose-verbs__section--two" data-count="two">
 		  	<h3 class="toggle-fold">Уровень 2  
 					<button class="choose-verbs__all  button--small  button">Выбрать все</button>
 					<button class="choose-verbs__clear-all  button--small  button  button--transparent">Очистить все</button>
@@ -113,7 +113,7 @@
 				<fieldset><input type="checkbox" name="understand" id="understand"><label for="understand">understand<span class="translation">: понимать</span></label></fieldset>
 		  	<fieldset><input type="checkbox" name="write" id="write"><label for="write">write<span class="translation">: писать</span></label></fieldset>
 		  </div>
-		  <div class="fold choose-verbs__section  choose-verbs__section--three">
+		  <div class="fold choose-verbs__section  choose-verbs__section--three" data-count="three">
 		  	<h3 class="toggle-fold">Уровень 3
 					<button class="choose-verbs__all  button--small  button">Выбрать все</button>
 					<button class="choose-verbs__clear-all  button--small  button  button--transparent">Очистить все</button>
@@ -145,7 +145,7 @@
 		  	<fieldset><input type="checkbox" name="win" id="win"><label for="win">win<span class="translation">: выигрывать</span></label></fieldset>
 				<fieldset><input type="checkbox" name="wear" id="wear"><label for="wear">wear<span class="translation">: носить</span></label></fieldset>
 		  </div>
-		  <div class="fold choose-verbs__section  choose-verbs__section--four">
+		  <div class="fold choose-verbs__section  choose-verbs__section--four" data-count="four">
 		  	<h3 class="toggle-fold">Уровень 4
 			  	<button class="choose-verbs__all  button--small  button">Выбрать все</button>
 			  	<button class="choose-verbs__clear-all  button--small  button  button--transparent">Очистить все</button> 
